--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.8.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.23.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
