--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "next": "10.0.9",
+    "next-sanity": "^0.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0"
