--- a/cms/package.json
+++ b/cms/package.json
@@ -14,16 +14,16 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.6.2",
-    "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.6.2",
-    "@sanity/default-layout": "^2.6.2",
-    "@sanity/default-login": "^2.2.6",
-    "@sanity/desk-tool": "^2.6.2",
-    "@sanity/vision": "^2.2.6",
+    "@sanity/base": "^2.14.0",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.14.0",
+    "@sanity/default-layout": "^2.14.0",
+    "@sanity/default-login": "^2.14.0",
+    "@sanity/desk-tool": "^2.14.0",
+    "@sanity/production-preview": "^2.14.0",
+    "@sanity/vision": "^2.14.0",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0"
-  },
-  "devDependencies": {}
+  }
 }
