--- a/cms/package.json
+++ b/cms/package.json
@@ -24,6 +24,7 @@
     "@sanity/vision": "^2.14.0",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "styled-components": "^5.3.11"
   }
 }
