--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
     "@sanity/client": "^2.8.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
-    "next": "10.0.9",
+    "next": "^12.3.4",
     "next-sanity": "^0.4.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
